some sonar cleanup; refs #20082